--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Echarts3 secondary encapsulation to support a unified data structure and encapsulates commonly used functions",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "webpack -p"
   },
   "repository": {
     "type": "git",
