--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "echarts-helper",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "Echarts3 secondary encapsulation to support a unified data structure and encapsulates commonly used functions",
   "main": "index.js",
   "scripts": {
-    "build": "webpack -p"
+    "build": "webpack && webpack -p"
   },
   "repository": {
     "type": "git",
